--- a/task_ruby_centos.yml
+++ b/task_ruby_centos.yml
@@ -3,8 +3,11 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: fordprior/obstacle_concourse}
+  source: {repository: fordprior/ruby_sample_app}
 
 run:
-  path: ls
-  args: [-l]
+  dir: specs
+  path: bundle
+  args:
+  - exec
+  - rspec
