--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,5 +1,5 @@
 # fly --target obstacle_concourse login --concourse-url http://127.0.0.1:8080
-# fly -t tutorial set-pipeline -c pipeline.yml -p obstacle_concourse
+# fly -t obstacle_concourse set-pipeline -c pipeline.yml -p obstacle_concourse
 # fly -t obstacle_concourse unpause-pipeline -p obstacle_concourse
 # ...then login to main with the UI and start the job
 
@@ -22,7 +22,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: ruby
+          repository: centos/ruby-24-centos7
       inputs:
       - name: obstacle_concourse
       run:
